5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1575_1332.log
== SUBMITION (2019-03-12 11:43:03) 
-- CODE:
aresta = print (5)
area = (print ("3/2*3a**0.5**2"))
 
print(round(area, 4))
-- EXECUTION TIME:
0.222979
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1332/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:44:40) 
-- CODE:
aresta = 5
area = (print(round"3/2*3a**0.5**2,4"))
 
print(round(area, 4))
-- EXECUTION TIME:
0.140881
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 2
    area = (print(round"3/2*3a**0.5**2,4"))
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:45) 
-- CODE:
aresta = 5
area = (print(round"3/2*3a**0.5**2,4"))
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = (print(round"3/2*3a**0.5**2,4"))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:16) 
-- CODE:
a = 5
A =  3/2*(3*a**2)**0.5
 
print(round(A, 4))
-- EXECUTION TIME:
0.186302
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:40) 
-- CODE:
a = 5
A =  3/2*((3*a**2)**0.5)
 
print(round(A, 4))
-- EXECUTION TIME:
0.191257
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:47) 
-- CODE:
a = 5
A =  3/2*((3*a**2)**0.5)
 
print(round(A, 4))
-- EXECUTION TIME:
0.144946
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:10) 
-- CODE:
a = 5
A =  3/2*((3*a**2)**0.5)
 
print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:19) 
-- CODE:
a = 5
A =  3/2*((3*a**2)**0.5)
 
print(round(A, 4))
-- EXECUTION TIME:
0.157046
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:21) 
-- CODE:
a = 5
A =  3/2*((3*a**2)**0.5)
 
print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:52:10) 
-- CODE:
a = 5
A =  3/2*((3*25)**0.5)
 
print(round(A, 4))
-- EXECUTION TIME:
0.174417
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:12) 
-- CODE:
a = 5
A =  3/2*((3*25)**0.5)
 
print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:52:37) 
-- CODE:
a = 5.0
A =  3/2*((3*25)**0.5)
 
print(round(A, 4))
-- EXECUTION TIME:
0.171286
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:22) 
-- CODE:
a = 5
A =  3/2*((3*(a**2))**0.5)
 
print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:54:26) 
-- CODE:
a = 5
A =  3/2*((3*(a**2))**0.5)
 
print(round(A, 4))
-- EXECUTION TIME:
0.22195
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:42) 
-- CODE:
a = 5
A =  3/2*(3**0.5)*(a**2)
 
print(round(A, 4))
-- EXECUTION TIME:
0.142097
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
